<?xml version="1.0"?>
<package>
  <name>opencv_catkin</name>
  <version>3.4.2</version>
  <description>opencv_catkin</description>
  <maintainer email="matias@robots.ox.ac.uk">Matias Mattamala</maintainer>
  <author>Paul Furgale</author>
  <license>New BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

</package>
